# gcp-hermes-agnet

./: .env.example  .gitignore  AGENTS.md  Dockerfile.gateway  README.md  RELEASE_NOTES.md  agent.py  agent_registry.yaml  agents.yaml  config.py  conftest.py  hello.py  local_sessions.db  pyproject.toml  pytest.ini  requirements.txt  setup_wizard.py  teardown_wizard.py
.github/: copilot-instructions.md
.rekipedia/: REFACTOR.md  refactor_report.json  scan_meta.json
agents/: __init__.py  agent_lifecycle.py  aggregator.py  analytics.py  developer.py  hr.py  it_helpdesk.py  loader.py  orchestrator.py  scoped_instructions.py  synthesizer.py  task_agent.py  task_metadata.py
connectors/: __init__.py  runner.py  slack.py  teams.py  telegram.py
docs/: API.md  ARCHITECTURE.md  cost-estimation.md  multi-agent-collaboration.md
eval/: eval_config.json  metrics.py  online_monitor.py  optimize.py  run_eval.py
gateway/: __init__.py  agent_gateway.py  auth.py  bq_analytics.py  main.py  observability.py  tasks.py
governance/: policies.yaml  policy_engine.py
hermes_app/: agent.py
infra/: clouddeploy.yaml  setup.sh
memory/: __init__.py  context_budget.py  cross_corpus.py  memcell_extractor.py  memcell_models.py  memcell_retrieval.py  memcell_store.py  memory_bank.py  skill_extractor.py  skill_learning.py  skill_loader.py  skill_models.py  skill_store.py  user_profile.py
models/: __init__.py  provider.py
registry/: agent_registry.py
scripts/: deploy.py  register_agents.py  setup_rag.py
skills/: TEMPLATE.md
tests/: conftest.py  test_teardown_wizard.py
(+99 files in other folders)
